[gd_scene load_steps=4 format=3 uid="uid://cps2lcok54gml"]

[ext_resource type="Texture2D" uid="uid://d1aqrktigl3e" path="res://Level1/Assets/validacion.png" id="1_1csyf"]
[ext_resource type="Script" uid="uid://c5abu6o8bkv5e" path="res://Level1/scripts/validacion.gd" id="1_s58yu"]
[ext_resource type="Texture2D" uid="uid://d3h7ak2koequy" path="res://Level1/Assets/box.png" id="2_s58yu"]

[node name="Validacion" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_s58yu")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 640.0
offset_bottom = 360.0
texture = ExtResource("1_1csyf")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="."]
offset_left = 106.0
offset_top = 108.0
offset_right = 554.0
offset_bottom = 337.0
texture = ExtResource("2_s58yu")
expand_mode = 1

[node name="Title" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="NodesContainer" type="GridContainer" parent="."]
custom_minimum_size = Vector2(128, 80)
offset_left = 192.0
offset_top = 170.0
offset_right = 390.0
offset_bottom = 298.0
columns = 3

[node name="ButtonConfirm" type="Button" parent="."]
offset_left = 528.0
offset_top = 314.0
offset_right = 613.0
offset_bottom = 345.0
text = "confirmar"

[node name="LabelFeedback" type="Label" parent="."]
offset_left = 42.0
offset_top = 109.0
offset_right = 82.0
offset_bottom = 132.0
